(Fixes #44) department text too large

--- a/src/components/PriceFormatter.css
+++ b/src/components/PriceFormatter.css
@@ -1,12 +1,22 @@
-.price-formatter-dollars {
+.price-formatter-dollars,
+.price-formatter--smaller {
   font-size: 3rem;
   font-weight: 400;
   line-height: 3rem;
   margin: 0 0.5rem;
 }
 
-.price-formatter-cents {
+.price-formatter-cents,
+.price-formatter--smaller {
   font-size: 1.5rem;
   font-weight: 600;
   vertical-align: super;
+}
+
+.price-formatter--smaller .price-formatter-dollars {
+  font-size: calc(3rem / 2);
+}
+
+.price-formatter--smaller .price-formatter-cents {
+  font-size: calc(1.5rem / 2);
 }
